# HSE-algorithms-course

./: .gitignore  CMakeLists.txt  README  dna_element.cpp  dna_element.h  dna_repairer.cpp  linked_list.h  linked_list.hpp  main.cpp  readme.txt
1-hw-radix-lin-sort/: .vimrc  GRTAGS  Makefile  RadixSort.cpp  main.cpp
1-hw-radix-lin-sort/build-myprog/: myprog
10-hw-graph/: Makefile  bellman_ford.cpp  main.cpp
10-hw-graph/build-myprog/: myprog
11-hw-kmp-string-matcher/: Makefile  kmp.cpp  main.cpp
11-hw-kmp-string-matcher/build-myprog/: myprog
12-hw-prj-xipoint/: readme.md
12-hw-prj-xipoint/docs/doxydoc/: Doxyfile.example
12-hw-prj-xipoint/sol/cmake/: CMakeLists.txt  vars.cmd
12-hw-prj-xipoint/sol/vs12/: Point.sln  Point.vcxproj  Point.vcxproj.filters
12-hw-prj-xipoint/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  xipoint.cpp  xipoint.h  xipoint_main
12-hw-prj-xipoint/tests/gtest/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  point_array_test.cpp  point_test.cpp  xipoint.cpp  xipoint_test_start
13-hw-stack-machine/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  int_stack.cpp  main.cpp  stack_machine  stack_machine.cpp  stack_machine.h
13-hw-stack-machine/tests/prj/tests/gtest/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  stack_machine_test  stack_machine_test.cpp
13-hw-stack-machine/tests/prj/tests/gtest/src/artem-abramov-bpi-151-1/: int_stack.cpp  main.cpp  stack_machine.cpp  stack_machine.h
14-hw-safe-array/: index.html  readme.md
14-hw-safe-array/docs/doxydoc/: Doxyfile
14-hw-safe-array/docs/doxydoc/src/: main.md
14-hw-safe-array/res/raw/: subjects.txt
14-hw-safe-array/sol/cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  safe-array.cbp
14-hw-safe-array/sol/cmake/tmpfiles/sol/: Makefile  cmake_install.cmake
14-hw-safe-array/sol/cmake/tmpfiles/tests/: Makefile  cmake_install.cmake
14-hw-safe-array/sol/cmake/tmpfiles/tests/gtest/: Makefile  cmake_install.cmake
14-hw-safe-array/sol/cmake/tmpfiles/tests/gtest/sol/cmake/: Makefile  cmake_install.cmake
14-hw-safe-array/sol/cmake/tmpfiles/tests/gtest/sol/cmake/src/: Makefile  cmake_install.cmake
14-hw-safe-array/src/: CMakeLists.txt  main.cpp  safearray.h  safearray.hpp  subject.cpp
14-hw-safe-array/tests/: CMakeLists.txt
14-hw-safe-array/tests/gtest/: readme.md
14-hw-safe-array/tests/gtest/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  safe_array_test_start  safearray_test.cpp  subject_test.cpp
15-hw-dnk-list/: readme.md  tests.zip1
15-hw-dnk-list/doxydoc-1.0/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  graph_legend.html  index.html  namespaces.html  pages.html
15-hw-dnk-list/doxydoc-1.0/html/search/: all_10.js  all_3.js  all_4.js  all_5.js  (+31 more)
15-hw-dnk-list/sol/cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  build-mingw.cmd  cmake_install.cmake
15-hw-dnk-list/sol/vs12/: BrokenDNA.sln  BrokenDNA.vcxproj  BrokenDNA.vcxproj.filters
15-hw-dnk-list/src/: CMakeLists.txt  dna_element.cpp  dna_element.h  dna_repairer.h  linked_list.hpp  main.cpp  readme.md
15-hw-dnk-list/tests/gtest/: CMakeLists.txt
15-hw-dnk-list/tests/gtest/sol/cmake/: CMakeLists.txt  UserParams.cmake
15-hw-dnk-list/tests/gtest/src/: .ycm_extra_conf.py  CMakeLists.txt  dna_repairer_test.cpp  linkedlist_test.cpp  test.in  test2.in  test5.in
16-hw-nice-queue/S5NiceQueueTmpl/: .ycm_extra_conf.py  CMakeCache.txt  CMakeLists.txt  Makefile  NiceQueue.hpp  NiceStack.hpp  cmake_install.cmake  main.cpp
17-hw-bidi-linkedlist/: readme.md
17-hw-bidi-linkedlist/docs/doxydoc/: Doxyfile.example  doxyit.cmd.example  readme.md
17-hw-bidi-linkedlist/sol/CLion/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
17-hw-bidi-linkedlist/src/: BidiLinkedList.hpp  demos.hpp  main.cpp
18-hw-fifo/sol/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
18-hw-fifo/src/: fifo.cpp  fifo.h  main.cpp  small.out  small.run
18-hw-fifo/test/: BidiLinkedList_Test.cpp
19-hw-parking-lot/sol/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
19-hw-parking-lot/src/: main.cpp
2-hw-merge-sort/: Makefile  main.cpp  merge_sort.cpp  merge_sort.h
2-hw-merge-sort/build-myprog/: myprog
20-hw-europe-rail/sol/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
20-hw-europe-rail/src/: RailSystem.cpp  main.cpp
21-hw-list-with-skips/sol/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
21-hw-list-with-skips/src/: JournalNetActivity.hpp  NetActivity.cpp  OrderedList.h  OrderedList.hpp  SkipList.h  SkipList.hpp  TimeStamp.cpp  main.cpp
22-hw-sum-of-parts/sol/: CMakeLists.txt
22-hw-sum-of-parts/src/: .ycm_extra_conf.py  main.cpp  parts.cpp  parts.h
23-hw-spellcheck/sol/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
23-hw-spellcheck/src/: .vimrc  dictionary.cpp  dictionary.h  hashset.cpp  hashset.h  main.cpp
3-hw-quick-sort/: Makefile  main.cpp  quick_sort.cpp  quick_sort.h
3-hw-quick-sort/build-myprog/: myprog
4-hw-pyramidal-sort/: Makefile  heapSort.cpp  main.cpp
4-hw-pyramidal-sort/build-myprog/: myprog
5-hw-knapsack/: GTAGS  Makefile  knapsack.cpp  knapsack.h  main.cpp
5-hw-knapsack/build-myprog/: myprog
6-hw-queens/: Makefile  eight_queen.cpp  eight_queen.h  main.cpp
6-hw-queens/build-myprog/: myprog
7-hw-linked-list/: .ycm_extra_conf.py  Makefile  linked_list.cpp  main.cpp
7-hw-linked-list/build-myprog/: myprog
8-hw-binary-tree/: binary_tree.cpp  binary_tree.h  main.cpp
8-hw-binary-tree/build-myprog/: myprog
9-hw-scc/: GPATH  Makefile  SCCSolver.cpp  SCCSolver.h  main.cpp
9-hw-scc/build-myprog/: myprog
prj/sol/: readme.md
prj/sol/cmake/: CMakeLists.txt  Makefile  build-default.cmd  cmake_install.cmake
prj/src/: CMakeLists.txt  main.cpp  rbtree.h  rbtree.hpp
(+57 files in other folders)
